SERVER-15392 safely parse geoNear command limit as long value