jstests/core/geo_validate.js
@@ -66,6 +66,7 @@ assert.throws(function(){
 assert.commandFailed(db.runCommand({geoNear: coll.getName(),
                                     near: [0,0], spherical: true, num: -1}));
 assert.commandFailed(db.runCommand({geoNear: coll.getName(),
-                                    near: [0,0], spherical: true, num: NaN}));
-assert.commandFailed(db.runCommand({geoNear: coll.getName(),
                                     near: [0,0], spherical: true, num: -Infinity}));
+// NaN is interpreted as limit 0
+assert.commandWorked(db.runCommand({geoNear: coll.getName(),
+                                    near: [0,0], spherical: true, num: NaN}));
